--- a/pom.xml
+++ b/pom.xml
@@ -29,15 +29,19 @@
     </site>
   </distributionManagement>
 
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
+<build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.10.1</version> <!-- o más reciente -->
+      <configuration>
+        <source>17</source>  <!-- o 11, según tu versión de Java -->
+        <target>17</target>  <!-- usa la misma versión -->
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
                     <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
